[project]
name = "ErisPulse-SystemStatus"
version = "1.0.3"
description = "获取系统内存、CPU、硬盘占用"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
urls = { "homepage" = "https://github.com/shanfishapp/ErisPulse-SystemStatus" }
authors = [
    { name = "ShanFish", email = "your@email.com" }
]
dependencies = [
    "psutil",
]

[project.entry-points]
"erispulse.module" = { "SystemStatus" = "SystemStatus:Main" }

[tool.flit.module]
name = "SystemStatus"  
